--- a/W4/D2/formulario-contacto/style.css
+++ b/W4/D2/formulario-contacto/style.css
@@ -20,7 +20,8 @@ body {
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 
-.container h2 {
+.container h1 {
+    text-align: center;
     margin-bottom: 10px;
 }
 
